--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f96a2">  <td>23/05/18 23:08:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTest.closeApp()[pri:100, instance:TestNG.SecondTest@7714e963]">closeApp</td> 
-  <td>main@1011279482</td>   <td></td> </tr>
-<tr bgcolor="9f96a2">  <td>23/05/18 23:08:40</td>   <td>-1894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTest.login()[pri:50, instance:TestNG.SecondTest@7714e963]">login</td> 
-  <td>main@1011279482</td>   <td></td> </tr>
-<tr bgcolor="9f96a2">  <td>23/05/18 23:08:15</td>   <td>-26730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTest.openApp()[pri:10, instance:TestNG.SecondTest@7714e963]">openApp</td> 
-  <td>main@1011279482</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:36:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.car_type()[pri:2, instance:Project_cognizant.Test_function@7b9a4292]">car_type</td> 
+  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.chat()[pri:7, instance:Project_cognizant.Test_function@7b9a4292]">chat</td> 
+  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.click()[pri:4, instance:Project_cognizant.Test_function@7b9a4292]">click</td> 
+  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:36:00</td>   <td>187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.colour()[pri:3, instance:Project_cognizant.Test_function@7b9a4292]">colour</td> 
+  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.help()[pri:6, instance:Project_cognizant.Test_function@7b9a4292]">help</td> 
+  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:35:45</td>   <td>-15191</td> <td>&nbsp;</td><td title="&gt;&gt;Test_function.input()[pri:0, instance:Project_cognizant.Test_function@7b9a4292]">&gt;&gt;input</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:35:59</td>   <td>-990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.open_page()[pri:0, instance:Project_cognizant.Test_function@7b9a4292]">open_page</td> 
+  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.sensor()[pri:5, instance:Project_cognizant.Test_function@7b9a4292]">sensor</td> 
+  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:36:02</td>   <td>1554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.validation()[pri:9, instance:Project_cognizant.Test_function@7b9a4292]">validation</td> 
+  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>1263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.visit()[pri:8, instance:Project_cognizant.Test_function@7b9a4292]">visit</td> 
+  <td>main@1609124502</td>   <td></td> </tr>
 </table>
