--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,18 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,977</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">34</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="9">Project_cognizant.Test_function</td><td><a href="#m0">car_type</a></td><td rowspan="1">1684440360643</td><td rowspan="1">186</td></tr><tr class="passedeven"><td><a href="#m1">chat</a></td><td rowspan="1">1684440361589</td><td rowspan="1">314</td></tr><tr class="passedeven"><td><a href="#m2">click</a></td><td rowspan="1">1684440361005</td><td rowspan="1">163</td></tr><tr class="passedeven"><td><a href="#m3">colour</a></td><td rowspan="1">1684440360830</td><td rowspan="1">174</td></tr><tr class="passedeven"><td><a href="#m4">help</a></td><td rowspan="1">1684440361336</td><td rowspan="1">252</td></tr><tr class="passedeven"><td><a href="#m5">open_page</a></td><td rowspan="1">1684440359653</td><td rowspan="1">988</td></tr><tr class="passedeven"><td><a href="#m6">sensor</a></td><td rowspan="1">1684440361169</td><td rowspan="1">166</td></tr><tr class="passedeven"><td><a href="#m7">validation</a></td><td rowspan="1">1684440362197</td><td rowspan="1">221</td></tr><tr class="passedeven"><td><a href="#m8">visit</a></td><td rowspan="1">1684440361906</td><td rowspan="1">288</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">annotation.b</td><td><a href="#m0">advacedsearch</a></td><td rowspan="1">1684512971706</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m1">search</a></td><td rowspan="1">1684512971698</td><td rowspan="1">4</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Project_cognizant.Test_function#car_type</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Project_cognizant.Test_function#chat</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Project_cognizant.Test_function#click</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Project_cognizant.Test_function#colour</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Project_cognizant.Test_function#help</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">Project_cognizant.Test_function#open_page</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">Project_cognizant.Test_function#sensor</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">Project_cognizant.Test_function#validation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">Project_cognizant.Test_function#visit</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">annotation.b#advacedsearch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">annotation.b#search</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
