--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse--436592632\testng-customsuite.xml</span>
+                    <span>C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse--1779377944\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">9 methods,   9 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,47 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="car_type">car_type</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="annotation.b" class="method navigator-link" hash-for-method="advacedsearch">advacedsearch</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="chat">chat</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="click">click</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="colour">colour</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="help">help</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="open_page">open_page</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="sensor">sensor</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="validation">validation</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="visit">visit</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="annotation.b" class="method navigator-link" hash-for-method="search">search</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -162,70 +127,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Project_cognizant.Test_function</span>
+              <span class="class-name">annotation.b</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="car_type">
-                  </a> <!-- car_type -->
-                  <span class="method-name">car_type</span>
+                  <a name="advacedsearch">
+                  </a> <!-- advacedsearch -->
+                  <span class="method-name">advacedsearch</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="chat">
-                  </a> <!-- chat -->
-                  <span class="method-name">chat</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="click">
-                  </a> <!-- click -->
-                  <span class="method-name">click</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="colour">
-                  </a> <!-- colour -->
-                  <span class="method-name">colour</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="help">
-                  </a> <!-- help -->
-                  <span class="method-name">help</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="open_page">
-                  </a> <!-- open_page -->
-                  <span class="method-name">open_page</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="sensor">
-                  </a> <!-- sensor -->
-                  <span class="method-name">sensor</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validation">
-                  </a> <!-- validation -->
-                  <span class="method-name">validation</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="visit">
-                  </a> <!-- visit -->
-                  <span class="method-name">visit</span>
+                  <a name="search">
+                  </a> <!-- search -->
+                  <span class="method-name">search</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -233,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse--436592632\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse--1779377944\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -242,7 +158,8 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Project_cognizant.Test_function&quot;/&gt;
+      &lt;class name=&quot;annotation.b&quot;/&gt;
+      &lt;class name=&quot;annotation.a&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -256,7 +173,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">Default test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -282,48 +199,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(9);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'open_page')
-data.setCell(0, 2, 'Project_cognizant.Test_function')
-data.setCell(0, 3, 988);
+data.setCell(0, 1, 'search')
+data.setCell(0, 2, 'annotation.b')
+data.setCell(0, 3, 4);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'chat')
-data.setCell(1, 2, 'Project_cognizant.Test_function')
-data.setCell(1, 3, 314);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'visit')
-data.setCell(2, 2, 'Project_cognizant.Test_function')
-data.setCell(2, 3, 288);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'help')
-data.setCell(3, 2, 'Project_cognizant.Test_function')
-data.setCell(3, 3, 252);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'validation')
-data.setCell(4, 2, 'Project_cognizant.Test_function')
-data.setCell(4, 3, 221);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'car_type')
-data.setCell(5, 2, 'Project_cognizant.Test_function')
-data.setCell(5, 3, 186);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'colour')
-data.setCell(6, 2, 'Project_cognizant.Test_function')
-data.setCell(6, 3, 174);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'sensor')
-data.setCell(7, 2, 'Project_cognizant.Test_function')
-data.setCell(7, 3, 166);
-data.setCell(8, 0, 8)
-data.setCell(8, 1, 'click')
-data.setCell(8, 2, 'Project_cognizant.Test_function')
-data.setCell(8, 3, 163);
+data.setCell(1, 1, 'advacedsearch')
+data.setCell(1, 2, 'annotation.b')
+data.setCell(1, 3, 1);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 5 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -349,47 +238,37 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Project_cognizant.Test_function</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">input</span>
+              <div class="chronological-class-name">annotation.a</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">hi</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
+              </div> <!-- configuration-suite before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">annotation.b</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">login</span>
+                <span class="method-start">21 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">open_page</span>
-                <span class="method-start">14206 ms</span>
+                <span class="method-name">search</span>
+                <span class="method-start">29 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">car_type</span>
-                <span class="method-start">15196 ms</span>
+                <span class="method-name">advacedsearch</span>
+                <span class="method-start">37 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">colour</span>
-                <span class="method-start">15383 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">click</span>
-                <span class="method-start">15558 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">sensor</span>
-                <span class="method-start">15722 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">help</span>
-                <span class="method-start">15889 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">chat</span>
-                <span class="method-start">16142 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">visit</span>
-                <span class="method-start">16459 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">validation</span>
-                <span class="method-start">16750 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">logout</span>
+                <span class="method-start">39 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">annotation.a</div> <!-- chronological-class-name -->
+              <div class="configuration-suite after">
+                <span class="method-name">by</span>
+                <span class="method-start">88 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
