--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:36:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.validation()[pri:9, instance:Project_cognizant.Test_function@7b9a4292]">validation</td> 
-  <td>main@1609124502</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>-608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.chat()[pri:7, instance:Project_cognizant.Test_function@7b9a4292]">chat</td> 
-  <td>main@1609124502</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:36:00</td>   <td>-1554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.car_type()[pri:2, instance:Project_cognizant.Test_function@7b9a4292]">car_type</td> 
-  <td>main@1609124502</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>-1192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.click()[pri:4, instance:Project_cognizant.Test_function@7b9a4292]">click</td> 
-  <td>main@1609124502</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>-861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.help()[pri:6, instance:Project_cognizant.Test_function@7b9a4292]">help</td> 
-  <td>main@1609124502</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:36:00</td>   <td>-1367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.colour()[pri:3, instance:Project_cognizant.Test_function@7b9a4292]">colour</td> 
-  <td>main@1609124502</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>-291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.visit()[pri:8, instance:Project_cognizant.Test_function@7b9a4292]">visit</td> 
-  <td>main@1609124502</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:35:59</td>   <td>-2544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.open_page()[pri:0, instance:Project_cognizant.Test_function@7b9a4292]">open_page</td> 
-  <td>main@1609124502</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:36:01</td>   <td>-1028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.sensor()[pri:5, instance:Project_cognizant.Test_function@7b9a4292]">sensor</td> 
-  <td>main@1609124502</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/19 01:35:45</td>   <td>-16745</td> <td>&nbsp;</td><td title="&gt;&gt;Test_function.input()[pri:0, instance:Project_cognizant.Test_function@7b9a4292]">&gt;&gt;input</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1609124502</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 21:46:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;b.login()[pri:0, instance:annotation.b@6b927fb]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2020152163</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 21:46:11</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;b.logout()[pri:0, instance:annotation.b@6b927fb]">&lt;&lt;logout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2020152163</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 21:46:11</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="b.advacedsearch()[pri:2, instance:annotation.b@6b927fb]">advacedsearch</td> 
+  <td>main@2020152163</td>   <td></td> </tr>
+<tr bgcolor="e9adcf">  <td>23/05/19 21:46:11</td>   <td>-17</td> <td title="&gt;&gt;a.hi()[pri:0, instance:annotation.a@2a798d51]">&gt;&gt;hi</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2020152163</td>   <td></td> </tr>
+<tr bgcolor="e9adcf">  <td>23/05/19 21:46:11</td>   <td>68</td> <td title="&lt;&lt;a.by()[pri:0, instance:annotation.a@2a798d51]">&lt;&lt;by</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2020152163</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 21:46:11</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="b.search()[pri:1, instance:annotation.b@6b927fb]">search</td> 
+  <td>main@2020152163</td>   <td></td> </tr>
 </table>
