--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c5ccac">  <td>23/05/18 23:12:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTest.openApp()[pri:10, instance:TestNG.SecondTest@20ce78ec]">openApp</td> 
-  <td>main@1011279482</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/18 23:13:09</td>   <td>18441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTest.login()[pri:50, instance:TestNG.SecondTest@20ce78ec]">login</td> 
-  <td>main@1011279482</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>23/05/18 23:13:11</td>   <td>20578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SecondTest.closeApp()[pri:100, instance:TestNG.SecondTest@20ce78ec]">closeApp</td> 
-  <td>main@1011279482</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.sensor()[pri:5, instance:Project_cognizant.Test_function@6379eb]">sensor</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:16</td>   <td>-9300</td> <td>&nbsp;</td><td title="&gt;&gt;Test_function.input()[pri:0, instance:Project_cognizant.Test_function@6379eb]">&gt;&gt;input</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:26</td>   <td>158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.help()[pri:6, instance:Project_cognizant.Test_function@6379eb]">help</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:26</td>   <td>410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.chat()[pri:7, instance:Project_cognizant.Test_function@6379eb]">chat</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:26</td>   <td>-159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.click()[pri:4, instance:Project_cognizant.Test_function@6379eb]">click</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:25</td>   <td>-505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.car_type()[pri:2, instance:Project_cognizant.Test_function@6379eb]">car_type</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:25</td>   <td>-316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.colour()[pri:3, instance:Project_cognizant.Test_function@6379eb]">colour</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:27</td>   <td>1003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.validation()[pri:9, instance:Project_cognizant.Test_function@6379eb]">validation</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:26</td>   <td>691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.visit()[pri:8, instance:Project_cognizant.Test_function@6379eb]">visit</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:24</td>   <td>-1380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_function.open_page()[pri:0, instance:Project_cognizant.Test_function@6379eb]">open_page</td> 
+  <td>main@1362728240</td>   <td></td> </tr>
+<tr bgcolor="c5ccac">  <td>23/05/19 20:46:27</td>   <td>1237</td> <td>&nbsp;</td><td title="&lt;&lt;Test_function.close()[pri:0, instance:Project_cognizant.Test_function@6379eb]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1362728240</td>   <td></td> </tr>
 </table>
