--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse-1812473078\testng-customsuite.xml</span>
+                    <span>C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse--659137050\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,47 +104,47 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="car_type">car_type</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="car_type">car_type</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="chat">chat</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="chat">chat</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="click">click</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="click">click</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="colour">colour</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="colour">colour</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="help">help</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="help">help</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="open_page">open_page</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="open_page">open_page</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="sensor">sensor</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="sensor">sensor</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="validation">validation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="validation">validation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Project_cognizant.Test_function" class="method navigator-link" hash-for-method="visit">visit</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="visit">visit</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -162,7 +162,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Project_cognizant.Test_function</span>
+              <span class="class-name">Mini_Project.project_test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -233,7 +233,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse-1812473078\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse--659137050\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -242,7 +242,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Project_cognizant.Test_function&quot;/&gt;
+      &lt;class name=&quot;Mini_Project.project_test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -285,45 +285,45 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(9);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'open_page')
-data.setCell(0, 2, 'Project_cognizant.Test_function')
-data.setCell(0, 3, 778);
+data.setCell(0, 2, 'Mini_Project.project_test')
+data.setCell(0, 3, 1039);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validation')
-data.setCell(1, 2, 'Project_cognizant.Test_function')
-data.setCell(1, 3, 314);
+data.setCell(1, 1, 'car_type')
+data.setCell(1, 2, 'Mini_Project.project_test')
+data.setCell(1, 3, 834);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'car_type')
-data.setCell(2, 2, 'Project_cognizant.Test_function')
-data.setCell(2, 3, 192);
+data.setCell(2, 1, 'help')
+data.setCell(2, 2, 'Mini_Project.project_test')
+data.setCell(2, 3, 345);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'colour')
-data.setCell(3, 2, 'Project_cognizant.Test_function')
-data.setCell(3, 3, 182);
+data.setCell(3, 1, 'chat')
+data.setCell(3, 2, 'Mini_Project.project_test')
+data.setCell(3, 3, 334);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'sensor')
-data.setCell(4, 2, 'Project_cognizant.Test_function')
-data.setCell(4, 3, 158);
+data.setCell(4, 1, 'visit')
+data.setCell(4, 2, 'Mini_Project.project_test')
+data.setCell(4, 3, 249);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'click')
-data.setCell(5, 2, 'Project_cognizant.Test_function')
-data.setCell(5, 3, 152);
+data.setCell(5, 1, 'validation')
+data.setCell(5, 2, 'Mini_Project.project_test')
+data.setCell(5, 3, 226);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'visit')
-data.setCell(6, 2, 'Project_cognizant.Test_function')
-data.setCell(6, 3, 145);
+data.setCell(6, 1, 'colour')
+data.setCell(6, 2, 'Mini_Project.project_test')
+data.setCell(6, 3, 208);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'chat')
-data.setCell(7, 2, 'Project_cognizant.Test_function')
-data.setCell(7, 3, 141);
+data.setCell(7, 1, 'sensor')
+data.setCell(7, 2, 'Mini_Project.project_test')
+data.setCell(7, 3, 200);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'help')
-data.setCell(8, 2, 'Project_cognizant.Test_function')
-data.setCell(8, 3, 104);
+data.setCell(8, 1, 'click')
+data.setCell(8, 2, 'Mini_Project.project_test')
+data.setCell(8, 3, 164);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -349,50 +349,50 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Project_cognizant.Test_function</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Mini_Project.project_test</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">input</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">open_page</span>
-                <span class="method-start">5743 ms</span>
+                <span class="method-start">3822 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">car_type</span>
-                <span class="method-start">6525 ms</span>
+                <span class="method-start">4865 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">colour</span>
-                <span class="method-start">6719 ms</span>
+                <span class="method-start">5701 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">click</span>
-                <span class="method-start">6902 ms</span>
+                <span class="method-start">5910 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">sensor</span>
-                <span class="method-start">7056 ms</span>
+                <span class="method-start">6080 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">help</span>
-                <span class="method-start">7215 ms</span>
+                <span class="method-start">6282 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">chat</span>
-                <span class="method-start">7320 ms</span>
+                <span class="method-start">6630 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">visit</span>
-                <span class="method-start">7462 ms</span>
+                <span class="method-start">6965 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">validation</span>
-                <span class="method-start">7609 ms</span>
+                <span class="method-start">7216 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">7926 ms</span>
+                <span class="method-start">7444 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
