--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse--659137050\testng-customsuite.xml</span>
+                    <span>C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse-192952971\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">9 methods,   9 passed</span>
+                    <span class="method-stats">10 methods,   10 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,47 +104,52 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="car_type">car_type</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="chat">chat</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="click">click</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="colour">colour</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="help">help</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="open_page">open_page</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="sensor">sensor</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="validation">validation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Mini_Project.project_test" class="method navigator-link" hash-for-method="visit">visit</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="parallel.InvocationCountDemo" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -162,70 +167,77 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Mini_Project.project_test</span>
+              <span class="class-name">parallel.InvocationCountDemo</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="car_type">
-                  </a> <!-- car_type -->
-                  <span class="method-name">car_type</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="chat">
-                  </a> <!-- chat -->
-                  <span class="method-name">chat</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="click">
-                  </a> <!-- click -->
-                  <span class="method-name">click</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="colour">
-                  </a> <!-- colour -->
-                  <span class="method-name">colour</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="help">
-                  </a> <!-- help -->
-                  <span class="method-name">help</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="open_page">
-                  </a> <!-- open_page -->
-                  <span class="method-name">open_page</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="sensor">
-                  </a> <!-- sensor -->
-                  <span class="method-name">sensor</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="validation">
-                  </a> <!-- validation -->
-                  <span class="method-name">validation</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="visit">
-                  </a> <!-- visit -->
-                  <span class="method-name">visit</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -233,7 +245,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse--659137050\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Rudransh Bhardwaj\AppData\Local\Temp\testng-eclipse-192952971\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -242,7 +254,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Mini_Project.project_test&quot;/&gt;
+      &lt;class name=&quot;parallel.InvocationCountDemo&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;test&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- parallel.InvocationCountDemo --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -282,48 +298,52 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(9);
+data.addRows(10);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'open_page')
-data.setCell(0, 2, 'Mini_Project.project_test')
-data.setCell(0, 3, 1039);
+data.setCell(0, 1, 'test')
+data.setCell(0, 2, 'parallel.InvocationCountDemo')
+data.setCell(0, 3, 8);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'car_type')
-data.setCell(1, 2, 'Mini_Project.project_test')
-data.setCell(1, 3, 834);
+data.setCell(1, 1, 'test')
+data.setCell(1, 2, 'parallel.InvocationCountDemo')
+data.setCell(1, 3, 2);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'help')
-data.setCell(2, 2, 'Mini_Project.project_test')
-data.setCell(2, 3, 345);
+data.setCell(2, 1, 'test')
+data.setCell(2, 2, 'parallel.InvocationCountDemo')
+data.setCell(2, 3, 2);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'chat')
-data.setCell(3, 2, 'Mini_Project.project_test')
-data.setCell(3, 3, 334);
+data.setCell(3, 1, 'test')
+data.setCell(3, 2, 'parallel.InvocationCountDemo')
+data.setCell(3, 3, 2);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'visit')
-data.setCell(4, 2, 'Mini_Project.project_test')
-data.setCell(4, 3, 249);
+data.setCell(4, 1, 'test')
+data.setCell(4, 2, 'parallel.InvocationCountDemo')
+data.setCell(4, 3, 1);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'validation')
-data.setCell(5, 2, 'Mini_Project.project_test')
-data.setCell(5, 3, 226);
+data.setCell(5, 1, 'test')
+data.setCell(5, 2, 'parallel.InvocationCountDemo')
+data.setCell(5, 3, 1);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'colour')
-data.setCell(6, 2, 'Mini_Project.project_test')
-data.setCell(6, 3, 208);
+data.setCell(6, 1, 'test')
+data.setCell(6, 2, 'parallel.InvocationCountDemo')
+data.setCell(6, 3, 1);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'sensor')
-data.setCell(7, 2, 'Mini_Project.project_test')
-data.setCell(7, 3, 200);
+data.setCell(7, 1, 'test')
+data.setCell(7, 2, 'parallel.InvocationCountDemo')
+data.setCell(7, 3, 1);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'click')
-data.setCell(8, 2, 'Mini_Project.project_test')
-data.setCell(8, 3, 164);
+data.setCell(8, 1, 'test')
+data.setCell(8, 2, 'parallel.InvocationCountDemo')
+data.setCell(8, 3, 1);
+data.setCell(9, 0, 9)
+data.setCell(9, 1, 'test')
+data.setCell(9, 2, 'parallel.InvocationCountDemo')
+data.setCell(9, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 19 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -349,51 +369,47 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Mini_Project.project_test</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">input</span>
+              <div class="chronological-class-name">parallel.InvocationCountDemo</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">test</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
-              <div class="test-method">
-                <span class="method-name">open_page</span>
-                <span class="method-start">3822 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">car_type</span>
-                <span class="method-start">4865 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">12 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">colour</span>
-                <span class="method-start">5701 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">15 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">click</span>
-                <span class="method-start">5910 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">19 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">sensor</span>
-                <span class="method-start">6080 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">21 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">help</span>
-                <span class="method-start">6282 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">24 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">chat</span>
-                <span class="method-start">6630 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">29 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">visit</span>
-                <span class="method-start">6965 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">32 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">validation</span>
-                <span class="method-start">7216 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">35 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-test after">
-                <span class="method-name">close</span>
-                <span class="method-start">7444 ms</span>
-              </div> <!-- configuration-test after -->
+              <div class="test-method">
+                <span class="method-name">test</span>
+                <span class="method-start">38 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
