--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,26 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project_test.car_type()[pri:2, instance:Mini_Project.project_test@478190fc]">car_type</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:44</td>   <td>1765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project_test.chat()[pri:7, instance:Mini_Project.project_test@478190fc]">chat</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:43</td>   <td>1045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project_test.click()[pri:4, instance:Mini_Project.project_test@478190fc]">click</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:44</td>   <td>2579</td> <td>&nbsp;</td><td title="&lt;&lt;project_test.close()[pri:0, instance:Mini_Project.project_test@478190fc]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:43</td>   <td>836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project_test.colour()[pri:3, instance:Mini_Project.project_test@478190fc]">colour</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:43</td>   <td>1417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project_test.help()[pri:6, instance:Mini_Project.project_test@478190fc]">help</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:37</td>   <td>-4861</td> <td>&nbsp;</td><td title="&gt;&gt;project_test.input()[pri:0, instance:Mini_Project.project_test@478190fc]">&gt;&gt;input</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:41</td>   <td>-1043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project_test.open_page()[pri:0, instance:Mini_Project.project_test@478190fc]">open_page</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:43</td>   <td>1215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project_test.sensor()[pri:5, instance:Mini_Project.project_test@478190fc]">sensor</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:44</td>   <td>2351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project_test.validation()[pri:9, instance:Mini_Project.project_test@478190fc]">validation</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
-<tr bgcolor="d6b89b">  <td>23/05/27 22:13:44</td>   <td>2100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="project_test.visit()[pri:8, instance:Mini_Project.project_test@478190fc]">visit</td> 
-  <td>main@1423561005</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="d6b89b">  <td>23/06/09 16:38:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvocationCountDemo.test()[pri:0, instance:parallel.InvocationCountDemo@795cd85e]">test</td> 
+  <td>main@887750041</td>   <td></td> </tr>
 </table>
